--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
     "plugins": ["prettier-plugin-tailwindcss"],
     "singleQuote": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "printWidth": 80,
+    "semi": false
   }
