--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "jsxSingleQuote": true,
     "printWidth": 80,
-    "semi": false
+    "semi": false,
+    "arrowParens": "avoid"
   }
