--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "npm run build"
-  publish = "fastPizza/dist"
+  publish = "dist"
+  base = "fastPizza"
 
 [[redirects]]
   from = "/fastPizza/*"
